issue resoved where, for some reason, the first location in the location select element was not displaying its sections in the section select menu.  All other locations, when selected, could then have any of their sections selected.  After trying several different things, I happened to change the shortcut to look for a location name, instead of a location index, and that solved the problem. I don't know if this has something to do with the first number being zero; Whatever it is I'm sure I'll gather enough knowledge at some future point to figure out.  I might make a post on Stack Overflow to see if anybody can come up with an answer.

--- a/src/App.css
+++ b/src/App.css
@@ -274,3 +274,4 @@ select{font-size: var(--btn-font-small);}
 .rename-box-form{width: 100%; height: fit-content; margin-bottom: var(--element-margin-bottom-medium); display: flex; flex-direction: column; align-items: center; justify-content: space-around;}
 .success-green{color: rgb(87, 247, 100) !important; font-weight: bold; font-style: italic;}
 
+.start-select{height: fit-content;}
